added rspec gem, and move api code to separate folder

--- a/app/views/home/front.html.erb
+++ b/app/views/home/front.html.erb
@@ -1,2 +1,5 @@
-<h1>Home#front</h1>
-<p>Find me in app/views/home/front.html.erb</p>
+<h1>Author:</h1>
+<p>Uday Kumar [udkumar@hotmail.com]</p>
+
+<p>This application would start with features like "Friend", "Unfriend", "Block", "Receive Updates" and only available with API only<br><br>
+Here is the <a href="https://github.com/udkumar/own_social_network_test/blob/master/README.md">GitHub Link</a> </p>
